--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@splidejs/vue-splide": "^0.5.16",
     "core-js": "^3.6.5",
+    "sass": "^1.48.0",
+    "sass-loader": "^10.2.1",
     "vue": "^3.0.0"
   },
   "devDependencies": {
